--- a/contact_me.html
+++ b/contact_me.html
@@ -27,7 +27,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="Portfolio.html" target="_blank">Portfolio</a>
+        <a class="nav-link" href="portfolio.html" target="_blank">Portfolio</a>
       </li>
     </ul>
   </div>
